# claude-code-transcripts-extended

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/claude_code_transcripts/: __init__.py  extract_prompts.py  knowledge_bank.py  pattern_analyzer.py  review_cli.py
src/claude_code_transcripts/templates/: base.html  index.html  master_index.html  page.html  project_index.html
tests/: test_generate_html.py
tests/__snapshots__/test_generate_html/: TestGenerateHtml.test_generates_index_html.html  TestGenerateHtml.test_generates_page_001_html.html  TestGenerateHtml.test_generates_page_002_html.html  TestParseSessionFile.test_jsonl_generates_html.html
